# baldwin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  baldwin.cabal
_notebooks/: MNIST.ipynb
app/: Main.hs
notebooks/: loadMNIST.ipynb
src/: ActFuncs.hs  Common.hs  Layer.hs  LayerTypes.hs  Linear.dyn_hi  Linear.dyn_o  Linear.hi  Linear.hs  MNIST.dyn_hi  MNIST.dyn_o  MNIST.hi  MNIST.hs  MyLib.hs  Network.hs  Neural.hs
test/: ActFuncs_test.hs  Layer_test.hs  MNIST_test.hs
