cabal-version:      2.4
name:               baldwin
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             CupOfTeaJay
maintainer:         tjgiven17@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Linear
                      MNIST
                      Neural

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.17.2.0,
                      bytestring,
                      split
    hs-source-dirs:   src
    default-language: Haskell2010

executable baldwin
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        base ^>=4.17.2.0,
        baldwin

    hs-source-dirs:   app
    default-language: Haskell2010
